src/decimill/parser/QueryParser.java
// Generated from QueryParser.g4 by ANTLR 4.4

    package decimill.parser;
    import decimill.*;
    import decimill.lang.*;
    import decimill.query.*;
    import decimill.expression.*;
    import org.apache.commons.lang3.StringUtils;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class QueryParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.4", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		InlineStart=1, BlockStart=2, EOL=3, Character=4, Word=5, Text=6, ID=7, 
		Int=8, Dbl=9, Procent=10, Allowed=11, Str=12, Dot=13, Colon=14, Comma=15, 
		Quote=16, FromTo=17, Refinement=18, Equals=19, PlusEq=20, MinusEq=21, 
		TimesEq=22, DivEq=23, Plus=24, Minus=25, Times=26, Div=27, Power=28, LowerThan=29, 
		GreaterThan=30, IsEqual=31, LBracket=32, RBracket=33, UBracket=34, LParent=35, 
		RParent=36, LCurly=37, RCurly=38, InlineEnd=39, BlockEnd=40, WS=41, BNL=42, 
		ERR=43;
	public static final String[] tokenNames = {
		"<INVALID>", "InlineStart", "BlockStart", "EOL", "Character", "Word", 
		"Text", "ID", "Int", "Dbl", "Procent", "Allowed", "Str", "Dot", "Colon", 
		"Comma", "Quote", "FromTo", "Refinement", "Equals", "PlusEq", "MinusEq", 
		"TimesEq", "DivEq", "Plus", "Minus", "Times", "Div", "Power", "LowerThan", 
		"GreaterThan", "IsEqual", "LBracket", "RBracket", "UBracket", "LParent", 
		"RParent", "LCurly", "RCurly", "InlineEnd", "BlockEnd", "WS", "BNL", "ERR"
	};
	public static final int
		RULE_parse = 0, RULE_element = 1, RULE_str = 2, RULE_inlineCode = 3, RULE_blockCode = 4, 
		RULE_period = 5, RULE_assign = 6, RULE_assignAndPrint = 7, RULE_evalAndPrint = 8, 
		RULE_eval = 9, RULE_assignment = 10, RULE_varAssignment = 11, RULE_refAssignment = 12, 
		RULE_expression = 13, RULE_expr_add = 14, RULE_expr_sub = 15, RULE_expr_mult = 16, 
		RULE_expr_div = 17, RULE_expr_pow = 18, RULE_expr_lt = 19, RULE_expr_gt = 20, 
		RULE_expr_eq = 21, RULE_expr_atom = 22, RULE_variable = 23, RULE_reference = 24, 
		RULE_evaluate = 25, RULE_array = 26, RULE_assoc_array = 27, RULE_function = 28, 
		RULE_string = 29, RULE_constant = 30, RULE_num_int = 31, RULE_num_double = 32, 
		RULE_num_procent = 33, RULE_dist = 34, RULE_val = 35, RULE_name = 36, 
		RULE_namespace = 37;
	public static final String[] ruleNames = {
		"parse", "element", "str", "inlineCode", "blockCode", "period", "assign", 
		"assignAndPrint", "evalAndPrint", "eval", "assignment", "varAssignment", 
		"refAssignment", "expression", "expr_add", "expr_sub", "expr_mult", "expr_div", 
		"expr_pow", "expr_lt", "expr_gt", "expr_eq", "expr_atom", "variable", 
		"reference", "evaluate", "array", "assoc_array", "function", "string", 
		"constant", "num_int", "num_double", "num_procent", "dist", "val", "name", 
		"namespace"
	};

	@Override
	public String getGrammarFileName() { return "QueryParser.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    Context context;
	    QueryCompiler compiler;
	    Rewriter rewriter;
	    int offset;
	    String carriage;

	public QueryParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ParseContext extends ParserRuleContext {
		public Context c;
		public QueryCompiler q;
		public Rewriter r;
		public TerminalNode EOF() { return getToken(QueryParser.EOF, 0); }
		public List<ElementContext> element() {
			return getRuleContexts(ElementContext.class);
		}
		public ElementContext element(int i) {
			return getRuleContext(ElementContext.class,i);
		}
		public ParseContext(ParserRuleContext parent, int invokingState) { super(parent, invokingState); }
		public ParseContext(ParserRuleContext parent, int invokingState, Context c, QueryCompiler q, Rewriter r) {
			super(parent, invokingState);
			this.c = c;
			this.q = q;
			this.r = r;
		}
		@Override public int getRuleIndex() { return RULE_parse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QueryParserListener ) ((QueryParserListener)listener).enterParse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QueryParserListener ) ((QueryParserListener)listener).exitParse(this);
		}
	}

	public final ParseContext parse(Context c,QueryCompiler q,Rewriter r) throws RecognitionException {
		ParseContext _localctx = new ParseContext(_ctx, getState(), c, q, r);
		enterRule(_localctx, 0, RULE_parse);

		        context = c;
		        compiler = q;
		        rewriter = r;
		    
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(76); element();
				}
				}
				setState(79); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << InlineStart) | (1L << BlockStart) | (1L << Character))) != 0) );
			setState(81); match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ElementContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(QueryParser.EOF, 0); }
		public StrContext str(int i) {
			return getRuleContext(StrContext.class,i);
		}
		public TerminalNode InlineEnd() { return getToken(QueryParser.InlineEnd, 0); }
		public List<StrContext> str() {
			return getRuleContexts(StrContext.class);
		}
		public InlineCodeContext inlineCode() {
			return getRuleContext(InlineCodeContext.class,0);
		}
		public TerminalNode BlockStart() { return getToken(QueryParser.BlockStart, 0); }
		public BlockCodeContext blockCode() {
			return getRuleContext(BlockCodeContext.class,0);
		}
		public TerminalNode BlockEnd() { return getToken(QueryParser.BlockEnd, 0); }
		public TerminalNode InlineStart() { return getToken(QueryParser.InlineStart, 0); }
		public ElementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_element; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QueryParserListener ) ((QueryParserListener)listener).enterElement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QueryParserListener ) ((QueryParserListener)listener).exitElement(this);
		}
	}

	public final ElementContext element() throws RecognitionException {
		ElementContext _localctx = new ElementContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_element);
		int _la;
		try {
			int _alt;
			setState(96);
			switch (_input.LA(1)) {
			case Character:
				enterOuterAlt(_localctx, 1);
				{
				setState(84); 
				_errHandler.sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						setState(83); str();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					setState(86); 
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
				} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
				}
				break;
			case InlineStart:
				enterOuterAlt(_localctx, 2);
				{
				setState(88); match(InlineStart);
				setState(89); inlineCode();
				setState(90); match(InlineEnd);
				}
				break;
			case BlockStart:
				enterOuterAlt(_localctx, 3);
				{
				setState(92); match(BlockStart);
				setState(93); blockCode();
				setState(94);
				_la = _input.LA(1);
				if ( !(_la==EOF || _la==BlockEnd) ) {
				_errHandler.recoverInline(this);
				}
				consume();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StrContext extends ParserRuleContext {
		public TerminalNode EOL() { return getToken(QueryParser.EOL, 0); }
		public List<TerminalNode> Character() { return getTokens(QueryParser.Character); }
		public TerminalNode Character(int i) {
			return getToken(QueryParser.Character, i);
		}
		public StrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_str; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QueryParserListener ) ((QueryParserListener)listener).enterStr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QueryParserListener ) ((QueryParserListener)listener).exitStr(this);
		}
	}

	public final StrContext str() throws RecognitionException {
		StrContext _localctx = new StrContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_str);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(99); 
			_errHandler.sync(this);
			_alt = 1;
			do {
				switch (_alt) {
				case 1:
					{
					{
					setState(98); match(Character);
					}
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				setState(101); 
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			} while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER );
			setState(104);
			_la = _input.LA(1);
			if (_la==EOL) {
				{
				setState(103); match(EOL);
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class InlineCodeContext extends ParserRuleContext {
		public AssignAndPrintContext assignAndPrint;
		public EvalAndPrintContext evalAndPrint;
		public PeriodContext period() {
			return getRuleContext(PeriodContext.class,0);
		}
		public AssignAndPrintContext assignAndPrint() {
			return getRuleContext(AssignAndPrintContext.class,0);
		}
		public EvalAndPrintContext evalAndPrint() {
			return getRuleContext(EvalAndPrintContext.class,0);
		}
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public RefAssignmentContext refAssignment() {
			return getRuleContext(RefAssignmentContext.class,0);
		}
		public InlineCodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inlineCode; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QueryParserListener ) ((QueryParserListener)listener).enterInlineCode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QueryParserListener ) ((QueryParserListener)listener).exitInlineCode(this);
		}
	}

	public final InlineCodeContext inlineCode() throws RecognitionException {
		InlineCodeContext _localctx = new InlineCodeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_inlineCode);
		try {
			setState(115);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(106); period();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(107); assign();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(108); ((InlineCodeContext)_localctx).assignAndPrint = assignAndPrint();

				        try {
				            rewriter.rewriteQueryInline(((InlineCodeContext)_localctx).assignAndPrint, ((InlineCodeContext)_localctx).assignAndPrint.value);
				        } catch (RuntimeException e) {
				            throw new CompilerException(e.getMessage(), (((InlineCodeContext)_localctx).assignAndPrint!=null?(((InlineCodeContext)_localctx).assignAndPrint.start):null).getLine(), (((InlineCodeContext)_localctx).assignAndPrint!=null?(((InlineCodeContext)_localctx).assignAndPrint.start):null).getCharPositionInLine());
				        }
				    
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(111); ((InlineCodeContext)_localctx).evalAndPrint = evalAndPrint();

				        try {
				            rewriter.rewriteQueryInline(((InlineCodeContext)_localctx).evalAndPrint, ((InlineCodeContext)_localctx).evalAndPrint.value);
				        } catch (RuntimeException e) {
				            throw new CompilerException(e.getMessage(), (((InlineCodeContext)_localctx).evalAndPrint!=null?(((InlineCodeContext)_localctx).evalAndPrint.start):null).getLine(), (((InlineCodeContext)_localctx).evalAndPrint!=null?(((InlineCodeContext)_localctx).evalAndPrint.start):null).getCharPositionInLine());
				        }
				    
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(114); refAssignment();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BlockCodeContext extends ParserRuleContext {
		public AssignAndPrintContext assignAndPrint;
		public EvalAndPrintContext evalAndPrint;
		public RefAssignmentContext refAssignment(int i) {
			return getRuleContext(RefAssignmentContext.class,i);
		}
		public List<AssignAndPrintContext> assignAndPrint() {
			return getRuleContexts(AssignAndPrintContext.class);
		}
		public List<EvalAndPrintContext> evalAndPrint() {
			return getRuleContexts(EvalAndPrintContext.class);
		}
		public List<AssignContext> assign() {
			return getRuleContexts(AssignContext.class);
		}
		public AssignContext assign(int i) {
			return getRuleContext(AssignContext.class,i);
		}
		public List<RefAssignmentContext> refAssignment() {
			return getRuleContexts(RefAssignmentContext.class);
		}
		public EvalAndPrintContext evalAndPrint(int i) {
			return getRuleContext(EvalAndPrintContext.class,i);
		}
		public AssignAndPrintContext assignAndPrint(int i) {
			return getRuleContext(AssignAndPrintContext.class,i);
		}
		public BlockCodeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_blockCode; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QueryParserListener ) ((QueryParserListener)listener).enterBlockCode(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QueryParserListener ) ((QueryParserListener)listener).exitBlockCode(this);
		}
	}

	public final BlockCodeContext blockCode() throws RecognitionException {
		BlockCodeContext _localctx = new BlockCodeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_blockCode);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(125); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(125);
				switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
				case 1:
					{
					setState(117); assign();
					}
					break;
				case 2:
					{
					setState(118); ((BlockCodeContext)_localctx).assignAndPrint = assignAndPrint();

					            try {
					                rewriter.rewriteQueryBlock(((BlockCodeContext)_localctx).assignAndPrint, ((BlockCodeContext)_localctx).assignAndPrint.value);
					            } catch (RuntimeException e) {
					                throw new CompilerException(e.getMessage(), (((BlockCodeContext)_localctx).assignAndPrint!=null?(((BlockCodeContext)_localctx).assignAndPrint.start):null).getLine(), (((BlockCodeContext)_localctx).assignAndPrint!=null?(((BlockCodeContext)_localctx).assignAndPrint.start):null).getCharPositionInLine());
					            }
					        
					}
					break;
				case 3:
					{
					setState(121); ((BlockCodeContext)_localctx).evalAndPrint = evalAndPrint();

					            try {
					                rewriter.rewriteQueryBlock(((BlockCodeContext)_localctx).evalAndPrint, ((BlockCodeContext)_localctx).evalAndPrint.value);
					            } catch (RuntimeException e) {
					                throw new CompilerException(e.getMessage(), (((BlockCodeContext)_localctx).evalAndPrint!=null?(((BlockCodeContext)_localctx).evalAndPrint.start):null).getLine(), (((BlockCodeContext)_localctx).evalAndPrint!=null?(((BlockCodeContext)_localctx).evalAndPrint.start):null).getCharPositionInLine());
					            }
					        
					}
					break;
				case 4:
					{
					setState(124); refAssignment();
					}
					break;
				}
				}
				setState(127); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Word) | (1L << ID) | (1L << Equals))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PeriodContext extends ParserRuleContext {
		public Num_intContext from;
		public Num_intContext to;
		public Num_intContext num_int(int i) {
			return getRuleContext(Num_intContext.class,i);
		}
		public List<Num_intContext> num_int() {
			return getRuleContexts(Num_intContext.class);
		}
		public TerminalNode FromTo() { return getToken(QueryParser.FromTo, 0); }
		public PeriodContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_period; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QueryParserListener ) ((QueryParserListener)listener).enterPeriod(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QueryParserListener ) ((QueryParserListener)listener).exitPeriod(this);
		}
	}

	public final PeriodContext period() throws RecognitionException {
		PeriodContext _localctx = new PeriodContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_period);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129); ((PeriodContext)_localctx).from = num_int();
			setState(130); match(FromTo);
			setState(131); ((PeriodContext)_localctx).to = num_int();


			        int from = ((PeriodContext)_localctx).from.value;
			        int to = ((PeriodContext)_localctx).to.value;
			        
			        if (from < 1 || to < 1) {
			            throw new CompilerException("Time values must be both greater than 0.", (((PeriodContext)_localctx).from!=null?(((PeriodContext)_localctx).from.start):null).getLine(), (((PeriodContext)_localctx).from!=null?(((PeriodContext)_localctx).from.start):null).getCharPositionInLine());
			        } else if (from > to) {
			            throw new CompilerException("'From' time must be less than or equal to 'to' time.", (((PeriodContext)_localctx).from!=null?(((PeriodContext)_localctx).from.start):null).getLine(), (((PeriodContext)_localctx).from!=null?(((PeriodContext)_localctx).from.start):null).getCharPositionInLine());
			        }

			        compiler.setFrom(((PeriodContext)_localctx).from.value - 1);
			        compiler.setTo(((PeriodContext)_localctx).to.value - 1);
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignContext extends ParserRuleContext {
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public AssignContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QueryParserListener ) ((QueryParserListener)listener).enterAssign(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QueryParserListener ) ((QueryParserListener)listener).exitAssign(this);
		}
	}

	public final AssignContext assign() throws RecognitionException {
		AssignContext _localctx = new AssignContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_assign);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(134); assignment();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignAndPrintContext extends ParserRuleContext {
		public DM_Object value;
		public AssignmentContext assignment;
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public TerminalNode Equals() { return getToken(QueryParser.Equals, 0); }
		public AssignAndPrintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignAndPrint; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QueryParserListener ) ((QueryParserListener)listener).enterAssignAndPrint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QueryParserListener ) ((QueryParserListener)listener).exitAssignAndPrint(this);
		}
	}

	public final AssignAndPrintContext assignAndPrint() throws RecognitionException {
		AssignAndPrintContext _localctx = new AssignAndPrintContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_assignAndPrint);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(136); match(Equals);
			setState(137); ((AssignAndPrintContext)_localctx).assignment = assignment();
			 ((AssignAndPrintContext)_localctx).value =  ((AssignAndPrintContext)_localctx).assignment.value; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EvalAndPrintContext extends ParserRuleContext {
		public DM_Object value;
		public EvalContext eval;
		public EvalContext eval() {
			return getRuleContext(EvalContext.class,0);
		}
		public TerminalNode Equals() { return getToken(QueryParser.Equals, 0); }
		public EvalAndPrintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_evalAndPrint; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QueryParserListener ) ((QueryParserListener)listener).enterEvalAndPrint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QueryParserListener ) ((QueryParserListener)listener).exitEvalAndPrint(this);
		}
	}

	public final EvalAndPrintContext evalAndPrint() throws RecognitionException {
		EvalAndPrintContext _localctx = new EvalAndPrintContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_evalAndPrint);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(140); match(Equals);
			setState(141); ((EvalAndPrintContext)_localctx).eval = eval();
			 ((EvalAndPrintContext)_localctx).value =  ((EvalAndPrintContext)_localctx).eval.value; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
